--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "dcs-icon-font",
   "version": "1.0.0",
   "description": "A font generator for generating both font and CSS for SVG files",
-  "main": "app/index.js",
+  "bin": {
+    "dcs-icon-font": "./app/index.js"
+  },
   "scripts": {
-    "start": "node app/index.js",
+    "start": "node app/index.js --teste oi",
     "build": "SET NODE_ENV=dev&& npm start",
     "build-prod": "SET NODE_ENV=prod && npm start",
     "compile": "babel src -d app",
     "watch": "watch \"npm run compile\" src"
   },
-  "author": "Orêncio Gonçalves",
+  "author": "Orêncio Gonçalves orencio.goncalves@exictos.com",
   "license": "ISC",
   "dependencies": {
     "glob": "^7.0.3",
+    "minimist": "^1.2.0",
     "webfonts-generator": "^0.3.5"
   },
   "devDependencies": {
